--- a/index.html
+++ b/index.html
@@ -54,16 +54,17 @@
         .profile-img-container {
             width: 200px;
             height: 200px;
-            border-radius: 50%;
             overflow: hidden;
-            border: 4px solid white;
+            border: 4px solid #fff;
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            border-radius: 8px;
         }
         
         .profile-img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
+            background-color: #f5f5f5;
         }
         
         .profile-info {
