Add profile image

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <div class="container">
             <div class="profile-header">
                 <div class="profile-img-container">
-                    <img src="./profile.jpg" alt="Fazle Rabbi" class="profile-img" onerror="this.onerror=null; this.src='https://via.placeholder.com/200';">
+                    <img src="" alt="Fazle Rabbi" class="profile-img" onerror="this.onerror=null; this.src='https://via.placeholder.com/200';">
                 </div>
                 <div class="profile-info">
                     <h1>Fazle Rabbi</h1>
