--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
         <div class="container">
             <div class="profile-header">
                 <div class="profile-img-container">
-                    <img src="https://raw.githubusercontent.com/Rabbii96/rabbii/main/image.jpeg" alt="Fazle Rabbi" class="profile-img" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="https://i.imgur.com/am816R8.jpg" alt="Fazle Rabbi" class="profile-img" style="width: 100%; height: 100%; object-fit: cover;">
                 </div>
                 <div class="profile-info">
                     <h1>Fazle Rabbi</h1>
