--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <h3 class="timeline-title">DevOps & Cloud Engineering</h3>
+                    <h3 class="timeline-title">Bootcamp: DevOps & Cloud Engineering</h3>
                     <span class="timeline-subtitle">Job-Ready Program</span>
                     <span class="timeline-date">2023</span>
                     <div class="timeline-description">
