--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <div class="contact-info">
                         <a href="tel:+8801521315133" class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <span>+880 1521 315133</span>
+                            <span></span>
                         </a>
                         <a href="mailto:frabbif96@gmail.com" class="contact-item">
                             <i class="fas fa-envelope"></i>
